--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "preview": "vite preview",
     "host": "vite --host",
     "package": "electron-packager . --ignore=\\.idea --overwrite",
-    "dist": "electron-builder"
+    "dist": "electron-builder",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "axios": "^1.6.7",
@@ -48,6 +51,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
@@ -56,8 +62,10 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jsdom": "^27.0.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "5.2.6"
+    "vite": "5.2.6",
+    "vitest": "^3.2.4"
   }
 }
